# ojt-optimization

./: .gitignore
Chapter01/boundary/: main.cpp
Chapter01/compute/: CMakeLists.txt  main.cpp
Chapter01/fill/: main.cpp
Chapter02/01/: main.cpp
Chapter02/02/: main.cpp
assets/: mtprint.h  ticktock.h
practical/KV_cache/: CMakeLists.txt  README.md  main.cpp
practical/KV_cache/assets/: fd_kv_cache.h  fd_kv_cache_single.h  fd_token.h  sharded_fd_kv_cache.h
practical/KV_cache/assets/detail/: flat_index_map.h
practical/database/: database.ipynb
practical/database/.db/: finace.db
